:lipstick: style: create side menu

--- a/src/styles/animations/animation.css
+++ b/src/styles/animations/animation.css
@@ -26,3 +26,14 @@
     transform: scale(1) translateX(0);
   }
 }
+
+
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
